完成了首页的功能

--- a/login.html
+++ b/login.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大事件项目</title>
-    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
     <!-- 导入自己的css样式 -->
-    <link rel="stylesheet" href="./assets/css/mylogin.css">
+    <link rel="stylesheet" href="/assets/css/mylogin.css">
 </head>
 
 <body>
@@ -81,12 +81,12 @@
     </div>
 </body>
 <!-- 导入layui的js文件 -->
-<script src="./assets/lib/layui/layui.all.js"></script>
+<script src="/assets/lib/layui/layui.all.js"></script>
 <!-- 导入jQuery文件 -->
-<script src="./assets/lib/jquery.js"></script>
+<script src="/assets/lib/jquery.js"></script>
 <!-- 导入baseAPI.js文件 -->
-<script src="./assets/js/baseAPI.js"></script>
+<script src="/assets/js/baseAPI.js"></script>
 <!-- 导入自己的js文件 -->
-<script src="./assets/js/mylogin.js"> </script>
+<script src="/assets/js/mylogin.js"> </script>
 
 </html>
