完成了文章功能模块

--- a/user/user_pwd.html
+++ b/user/user_pwd.html
@@ -8,7 +8,7 @@
     <title>用户个人信息</title>
     <!-- 导入layui里的css文件 -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <!-- 导入user_info.css文件 -->
+    <!-- 导入user_pwd.css文件 -->
     <link rel="stylesheet" href="/assets/css/user/user_pwd.css">
 </head>
 
