--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
     <!-- 导入cropper.css文件 -->
     <link rel="stylesheet" href="/assets/lib/cropper/cropper.css" />
-    <!-- 导入user_info.css文件 -->
+    <!-- 导入user_avatar.css文件 -->
     <link rel="stylesheet" href="/assets/css/user/user_avatar.css">
 </head>
 
@@ -24,7 +24,7 @@
                 <!-- 图片裁剪区域 -->
                 <div class="cropper-box">
                     <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
-                    <img id="image" src="" />
+                    <img id="image" src="/assets/images/sample.jpg" />
                 </div>
                 <!-- 图片的预览区域 -->
                 <div class="preview-box">
